Fixed slider: now textField doesn't take place if it should be invisible. Fixed slider demo because of changes above. Fixed slider: add dependency between border of slider when it is focused and padding ( previously was hardcoded).

--- a/liveDemo/core/resources/slider/slider.css
+++ b/liveDemo/core/resources/slider/slider.css
@@ -19,20 +19,20 @@
 }
 
 #opacityLabel {
-    padding-top: 22px;
-    padding-left: 25px;
+    margin-top: 22px;
+    margin-left: 25px;
 }
 
 #widthLabel {
-    padding-top: 25px;
-    padding-left: 80px;
-    padding-right: 25px;
+    margin-top: 25px;
+    margin-left: 80px;
+    margin-right: 15px;
     float: left;
 }
 
 #fontLabel {
     padding-top: 20px;
-    padding-left: 60px;
+    padding-left: 70px;
 }
 
 #changed_text {
@@ -44,8 +44,7 @@
 }
 
 .widthSlider {
-    width: 435px;
-    height: 30px;
+    width: 490px;
 }
 
 .colorSlider {
@@ -58,8 +57,9 @@
 }
 
 .sliderFont {
-    padding-left: 30px;
+    margin-left: 23px;
     width: 325px;
+    padding: 10px;
 }
 
 .sliderOpacity {
